versioned_docs/version-4.0.0/server/macos/installation.md
---
id: installation
title: macOS Installation
sidebar_label: macOS
description: "Install Keploy natively on macOS (Apple Silicon) with the one-click curl installer or Homebrew. Docker Desktop and Colima setups are supported for containerized apps."
tags:
  - hello-world
  - macos
  - ebpf
  - installation
  - install
  - installation-guide
  - server-setup
keywords:
  - hello-world
  - macos
  - apple
  - ebpf
  - installation
  - guide
  - api
  - docker
  - homebrew
  - brew install keploy
---

import HowTo from '@site/src/components/HowTo';

<HowTo
name="Install Keploy on macOS"
description="Install the Keploy CLI on macOS using the one-click curl installer or Homebrew."
totalTime="PT5M"
estimatedCost={{currency: "USD", value: "0"}}
tools={["bash", "curl", "Homebrew (optional)"]}
supplies={["An Apple Silicon Mac"]}
visible={false}
steps={[
{
name: "One-click install (recommended)",
text: "Run: curl --silent -O -L https://keploy.io/install.sh && source install.sh",
url: "#one-click-install-keploy",
},
{
name: "Install with Homebrew",
text: "Run: brew install keploy/tap/keploy",
url: "#install-with-homebrew",
},
]}
/>

There are two ways to install Keploy on macOS:

1. **Recommended:** [One-click install](#one-click-install-keploy).
2. [Install with Homebrew](#install-with-homebrew).

Natively on macOS, Keploy understands HTTP/HTTPS, MySQL and MongoDB calls; calls to other services — PostgreSQL, Redis, Kafka, gRPC and the like — are captured only as raw bytes and usually don't replay. If your app runs in containers or depends on one of those other services, a [manual setup with Docker Desktop or Colima](#manual-setup) is also available.

:::note Apple Silicon only

Both routes install the native Keploy CLI, which is built for **Apple Silicon (arm64) only** — the installer stops with a message on an Intel Mac, and the Homebrew formula refuses to install there. The [manual Docker Desktop / Colima setup](#manual-setup) below is driven by that same CLI: it starts your app and Keploy's eBPF agent in containers inside the Linux VM, but the CLI itself runs on your Mac, so that route is Apple Silicon only too. On an Intel Mac, run Keploy with [Lima](/docs/installation/macos-installation/#option-2-install-keploy-with-lima) instead.

:::

## One-click install Keploy

Run the following command in your terminal:

```shell
 curl --silent -O -L https://keploy.io/install.sh && source install.sh
```

## Install with Homebrew

If you prefer [Homebrew](https://brew.sh/), install Keploy from the official Keploy tap:

```shell
brew install keploy/tap/keploy
```

Verify the install:

```shell
keploy --version
```

## Manual Setup

To record an app that runs in containers, or one whose dependencies Keploy does not understand natively on macOS, run Keploy through either **Docker Desktop** or **Colima**.

### Using Docker Desktop

Note: To run Keploy on macOS through [Docker](https://docs.docker.com/desktop/release-notes/#4252) the version must
be `4.25.2` or above.

#### Creating Docker Volume & Network

We need to create debug volume to run Keploy using Docker-Desktop:

```shell
docker volume create --driver local --opt type=debugfs --opt device=debugfs debugfs
```

We need to create a custom network for Keploy since we are using the Docker, therefore application container would
require `docker network` to act as the bridge between them.

If you're using a **docker-compose network**, replace `keploy-network` with your app's `docker_compose_network_name`
below.

```shell
docker network create keploy-network
```

### Using Colima

#### Install Colima

You need to have the latest version of `brew` installed on your system and then run this command from a terminal:

```shell
brew install colima
```

Start Colima with defaults

```shell
colima start
```

#### Creating Alias

We need to create a custom network for Keploy since we are using the Docker, therefore application container would
require `docker network` to act as the bridge between them.

If you're using a **docker-compose network**, replace `keploy-network` with your app's `docker_compose_network_name`
below.

```shell
docker network create keploy-network
```

#### Recording Testcases and Data Mocks

Here are few points to consider before recording!

- If you're running via **docker compose**, ensure to include the `<CONTAINER_NAME>` under your application service in
  the docker-compose.yaml
  file [like this](https://github.com/keploy/samples-python/blob/9d6cf40da2eb75f6e035bedfb30e54564785d5c9/flask-mongo/docker-compose.yml#L14)
  .

- Change the **network name** (`--network` flag) from `keploy-network` to your custom network if you changed it above.
- `Docker_CMD_to_run_user_container` refers to the Docker **command for launching** the application.

Utilize keploy to capture testcases. **Execute** the following command within your application's **root directory**.

```shell
keploy record -c "docker run -p <appPort>:<hostPort> --name <containerName> --network keploy-network --rm <applicationImage>" --containerName "<containerName>" --delay 10
```

Make API Calls using Postman, or cURL commands.

Keploy will capture the API calls you've conducted, generating test suites comprising **testcases (KTests) and data
mocks (KMocks)** in `YAML` format.

#### Running Testcases

Now, execute the testcases. Follow these steps in the **root directory** of your application.

When using **docker-compose** to start the application, it's important to ensure that the `--containerName` parameter
matches the container name in your `docker-compose.yaml` file.

```shell
keploy test -c "docker run -p <appPort>:<hostPort> --name <containerName> --network keploy-network --rm <applicationImage>" --containerName "<containerName>" --delay 20
```

Voilà! 🧑🏻‍💻 We have the tests with data mocks running! 🐰🎉

You'll be able to see the test-cases that ran with the results report on the console as well locally in the `testReport`
directory.

1. `delay` is required while using Test Mode.
2. containerName is optional if you are using `Docker run` command, as the Container name would be present within the
   command itself.
